--- a/book/styles/nav.css
+++ b/book/styles/nav.css
@@ -295,8 +295,8 @@ Table of content on iOS devices
 #####################################################################
 */
 
-body{
-	 background-color: #000 !important;
+body.body-toc-ios{
+	 background: #000 !important;
 	 overflow-x: auto !important;
 	 overflow-y: hidden;
 	 height: !important;
@@ -304,13 +304,21 @@ body{
 	 width: 100% !important;
 }
 
-.body-toc-ios {
-    display: block;
-    min-width: 1024px;
+.wrapper-toc-ios {
+	display: block;
+	min-width: 1024px;
     width: 820px;/* The width must be number of table of content entries * width of entry (410px)*/
     margin: 0px; padding: 0px;
     background-color: #000;
     
+}
+.toc-list-ios {
+    height: 197px;
+    margin-top: 0px; margin-right: 0px;
+    padding: 0px;
+    border-top: 3px solid #FFFFFF;
+    white-space: normal;
+    width:100%;
 }
 .toc-list-ios {
     height: 197px;
