--- a/book/styles/nav.css
+++ b/book/styles/nav.css
@@ -298,14 +298,20 @@ body.body-toc-ios {
     width: 2050px;/* The width must be number of table of content entries * width of entry (410px)*/
     margin: 0px; padding: 0px;
     background-color: #000;
+    overflow-y: hidden;
+    overflow-x: auto;
+
     
 }
 .toc-list-ios {
-    height: 197px;
     margin-top: 0px; margin-right: 0px;
+    min-width: 1024px;
     padding: 0px;
     border-top: 3px solid #77f9ae;
     white-space: normal
+    width:100%;
+    height:197px !important;
+
 }
 .toc-list-ios .toc-dossier-number {
     position: absolute;
